Model predicts accurately but can improve RMSE 33.7

--- a/Sales Prediction using XG boost.ipynb
+++ b/Sales Prediction using XG boost.ipynb
@@ -6874,9 +6874,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 379,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -6884,6 +6893,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "import xgboost as xgb\n",
+    "from xgboost import XGBRegressor\n",
     "import joblib\n",
     "sales_df=pd.read_csv('Sales_Data_New.csv')\n",
     "# Assuming your DataFrame is named 'salesdf'\n",
@@ -6893,39 +6903,367 @@
     "features = ['Product ID', 'Day', 'Month', 'Year', 'Week_of_Year', 'Rainfall', 'DayOfWeek', 'IsAHoliday', 'Category']\n",
     "target = 'Units Sold'\n",
     "\n",
-    "X = sales_df[features]\n",
-    "y = sales_df[target]\n",
     "\n",
-    "# Splitting the data into training and validation sets\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "numeric_cols = ['Product ID', 'Day', 'Month', 'Year', 'Week_of_Year', 'Rainfall', 'DayOfWeek', 'IsAHoliday']\n",
+    "scaler = StandardScaler()\n",
+    "sales_df[numeric_cols] = scaler.fit_transform(sales_df[numeric_cols])\n",
+    "encoder = OneHotEncoder(sparse=False, handle_unknown='ignore').fit(sales_df[categorical_cols])\n",
+    "encoded_cols = list(encoder.get_feature_names_out(categorical_cols))\n",
+    "sales_df[encoded_cols] = encoder.transform(sales_df[categorical_cols])\n",
+    "\n",
+    "X = sales_df[numeric_cols + encoded_cols]\n",
+    "y = sales_df[target]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 380,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train RMSE: 33.771499704921084, Validation RMSE: 35.001757884057234\n"
+     ]
+    }
+   ],
    "source": [
-    "# Scaling numeric features\n",
-    "numeric_cols = ['Product ID', 'Day', 'Month', 'Year', 'Week_of_Year', 'Rainfall', 'DayOfWeek', 'IsAHoliday']\n",
-    "scaler = StandardScaler()\n",
-    "X_train[numeric_cols] = scaler.fit_transform(X_train[numeric_cols])\n",
-    "X_val[numeric_cols] = scaler.transform(X_val[numeric_cols])"
+    "# Splitting the data into training and validation sets\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.4, random_state=42)\n",
+    "model = XGBRegressor(n_jobs=-1, random_state=50, n_estimators=1000, \n",
+    "                    learning_rate=0.03, max_depth=8, subsample=0.9,  enable_categorical=True)\n",
+    "model.fit(X_train, y_train)\n",
+    "train_rmse = rmse(model.predict(X_train), y_train)\n",
+    "val_rmse = rmse(model.predict(X_val), y_val)\n",
+    "print('Train RMSE: {}, Validation RMSE: {}'.format(train_rmse, val_rmse))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fix the categorical column encoding part"
+    "Save the model,encoder and scaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 381,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/xgboost/core.py:160: UserWarning: [22:03:39] WARNING: /Users/runner/work/xgboost/xgboost/src/c_api/c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "joblib.dump(scaler, 'scaler.joblib')\n",
+    "joblib.dump(encoder, 'encoder.joblib')\n",
+    "model.save_model('xgboost_model.model')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Testing the Model on new Input </h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Units Sold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AMBEWELA SET YOGHURT 80ML</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HIGHLAND BUTTER SALTED 200G</td>\n",
+       "      <td>BUTTER</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CARGILLS CHOCOLATE ICE CREAM 2L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CARGILLS CHOCOLATE ICE CREAM 1L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CARGILLS VANILLA ICE CREAM 2L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CARGILLS VANILLA ICE CREAM 1L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ELEPHANT HOUSE CHOCOALTE ICE CREAM 1L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ELEPHANT HOUSE CHOCOALTE ICE CREAM 2L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>COCACOLA 1.5L</td>\n",
+       "      <td>COLD BEVERAGE</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ELEPHANT HOUSE CHOCOALTE ICE CREAM 4L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>FANTA 1.5L</td>\n",
+       "      <td>COLD BEVERAGE</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>HAPPY COW CHEESE 120G</td>\n",
+       "      <td>CHEESE</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>HARISCHANDRA COFFEE 100G</td>\n",
+       "      <td>COFFEE</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>HARISCHANDRA COFFEE 50G</td>\n",
+       "      <td>COFFEE</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>HARISCHANDRA COFFEE 200G</td>\n",
+       "      <td>COFFEE</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>KOTMALE CHEESE WEDGES 120G</td>\n",
+       "      <td>CHEESE</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>LION SODA 1.5L</td>\n",
+       "      <td>COLD BEVERAGE</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NEWDALE SET YOGHURT 80G</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>PORTELLO 1.5L</td>\n",
+       "      <td>COLD BEVERAGE</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>PRIMA WHEAT FLOUR 1KG</td>\n",
+       "      <td>FLOUR</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>SPRITE 1.5L</td>\n",
+       "      <td>COLD BEVERAGE</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>ELEPHANT HOUSE STRAWBERRY ICE CREAM 2L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>ELEPHANT HOUSE STRAWBERRY ICE CREAM 4L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>ELEPHANT HOUSE STRAWBERRY ICE CREAM 1L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>UDAYAGIRI WHEAT FLOUR 1KG</td>\n",
+       "      <td>FLOUR</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>ELEPHANT HOUSE VANILA ICE CREAM 2L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>ELEPHANT HOUSE VANILA ICE CREAM 4L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>ELEPHANT HOUSE VANILA ICE CREAM 1L</td>\n",
+       "      <td>ICE CREAM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>HIGHLAND YOGHURT 80ML</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Product Name       Category  Units Sold\n",
+       "0                AMBEWELA SET YOGHURT 80ML        YOGHURT          14\n",
+       "1              HIGHLAND BUTTER SALTED 200G         BUTTER           3\n",
+       "2          CARGILLS CHOCOLATE ICE CREAM 2L      ICE CREAM           1\n",
+       "3          CARGILLS CHOCOLATE ICE CREAM 1L      ICE CREAM           1\n",
+       "4            CARGILLS VANILLA ICE CREAM 2L      ICE CREAM           1\n",
+       "5            CARGILLS VANILLA ICE CREAM 1L      ICE CREAM           1\n",
+       "6    ELEPHANT HOUSE CHOCOALTE ICE CREAM 1L      ICE CREAM           1\n",
+       "7    ELEPHANT HOUSE CHOCOALTE ICE CREAM 2L      ICE CREAM           1\n",
+       "8                            COCACOLA 1.5L  COLD BEVERAGE           2\n",
+       "9    ELEPHANT HOUSE CHOCOALTE ICE CREAM 4L      ICE CREAM           1\n",
+       "10                              FANTA 1.5L  COLD BEVERAGE           1\n",
+       "11                   HAPPY COW CHEESE 120G         CHEESE           3\n",
+       "12                HARISCHANDRA COFFEE 100G         COFFEE           3\n",
+       "13                 HARISCHANDRA COFFEE 50G         COFFEE           3\n",
+       "14                HARISCHANDRA COFFEE 200G         COFFEE           3\n",
+       "15              KOTMALE CHEESE WEDGES 120G         CHEESE           3\n",
+       "16                          LION SODA 1.5L  COLD BEVERAGE           1\n",
+       "17                 NEWDALE SET YOGHURT 80G        YOGHURT          11\n",
+       "18                           PORTELLO 1.5L  COLD BEVERAGE           1\n",
+       "19                   PRIMA WHEAT FLOUR 1KG          FLOUR           7\n",
+       "20                             SPRITE 1.5L  COLD BEVERAGE           1\n",
+       "21  ELEPHANT HOUSE STRAWBERRY ICE CREAM 2L      ICE CREAM           0\n",
+       "22  ELEPHANT HOUSE STRAWBERRY ICE CREAM 4L      ICE CREAM           0\n",
+       "23  ELEPHANT HOUSE STRAWBERRY ICE CREAM 1L      ICE CREAM           0\n",
+       "24               UDAYAGIRI WHEAT FLOUR 1KG          FLOUR           6\n",
+       "25      ELEPHANT HOUSE VANILA ICE CREAM 2L      ICE CREAM           1\n",
+       "26      ELEPHANT HOUSE VANILA ICE CREAM 4L      ICE CREAM           1\n",
+       "27      ELEPHANT HOUSE VANILA ICE CREAM 1L      ICE CREAM           1\n",
+       "28                   HIGHLAND YOGHURT 80ML        YOGHURT          24"
+      ]
+     },
+     "execution_count": 383,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date=\"2024-01-20\"\n",
+    "rainfall=10.0\n",
+    "new_record = pd.read_csv('Predictions.csv')\n",
+    "new_record=initialiseValuesToDataset(date,rainfall,new_record)\n",
+    "results=new_record\n",
+    "\n",
+    "scaler = joblib.load('scaler.joblib')# Load the scaler\n",
+    "encoder = joblib.load('encoder.joblib')# Load the encoder\n",
+    "model = XGBRegressor()\n",
+    "model.load_model('xgboost_model.model')# Load the model\n",
+    "\n",
+    "columns_to_drop = [\"Product Name\", \"Units Sold\"]#not needed for prediction\n",
+    "new_record = new_record.drop(columns=columns_to_drop)  \n",
+    "\n",
+    "# Separate numeric and categorical columns\n",
+    "numeric_cols_new_record = new_record.select_dtypes(include=['number'])#get the numeric columns and store in a variable\n",
+    "categorical_cols_new_record = new_record.select_dtypes(exclude=['number'])#get the categorical columns and store in a variable\n",
+    "\n",
+    "# Preprocess the numeric columns\n",
+    "numeric_cols_new_record_scaled = scaler.transform(numeric_cols_new_record)\n",
+    "\n",
+    "# Preprocess the categorical columns\n",
+    "categorical_cols_new_record_encoded = pd.DataFrame(encoder.transform(categorical_cols_new_record), columns=encoded_cols)#get ehe encoded version\n",
+    "\n",
+    "# Combine the preprocessed numeric and categorical columns\n",
+    "new_record[numeric_cols_new_record.columns] = numeric_cols_new_record_scaled#set the scaled values and the encoded values to the new_record dataframe\n",
+    "new_record=pd.concat([new_record, categorical_cols_new_record_encoded], axis=1)\n",
+    "new_record.drop(columns=\"Category\", inplace=True)\n",
+    "\n",
+    "# Make predictions\n",
+    "predicted_units_sold = model.predict(new_record)#predicts the units sold\n",
+    "\n",
+    "results[\"Units Sold\"] = predicted_units_sold.astype(int)#converts the predicted units sold to int and stores in the results dataframe\n",
+    "results[[\"Product Name\",\"Category\",\"Units Sold\"]]#displays the results "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>As At 20th Jan : RMSE 33.7 </H1>"
+   ]
   }
  ],
  "metadata": {
