--- a/Sales ANN.ipynb
+++ b/Sales ANN.ipynb
@@ -414,7 +414,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arkha\\AppData\\Local\\Temp\\ipykernel_23888\\2174479189.py:2: UserWarning: \n",
+      "C:\\Users\\arkha\\AppData\\Local\\Temp\\ipykernel_15016\\2174479189.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -991,7 +991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BatchNormalization is used to ensure a meand close to 0 and a standard deviation close to 1. \n",
+    "BatchNormalization is used to ensure a mean close to 0 and a standard deviation close to 1. \n",
     "Dropout layer is used to prevent overfitting as randomly removes values. In this model 30% of the values are randomly removed."
    ]
   },
@@ -1070,7 +1070,7 @@
     }
    ],
    "source": [
-    "model.compile(optimizer=\"adam\", loss=\"mean_absolute_error\", metrics=[\"mean_absolute_error\"])\n",
+    "model.compile(optimizer=\"adam\", loss=\"mean_absolute_error\", metrics=[\"accuracy\"])\n",
     "model.summary()"
    ]
   },
@@ -1104,31 +1104,31 @@
       "\n",
       "WARNING:tensorflow:From c:\\Users\\arkha\\anaconda3\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "1216/1216 [==============================] - 5s 3ms/step - loss: 0.8936 - mean_absolute_error: 0.8936 - val_loss: 0.8983 - val_mean_absolute_error: 0.8983\n",
+      "1216/1216 [==============================] - 7s 5ms/step - loss: 0.8940 - accuracy: 0.0000e+00 - val_loss: 0.8887 - val_accuracy: 0.0000e+00\n",
       "Epoch 2/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8838 - mean_absolute_error: 0.8838 - val_loss: 0.8893 - val_mean_absolute_error: 0.8893\n",
+      "1216/1216 [==============================] - 4s 4ms/step - loss: 0.8858 - accuracy: 0.0000e+00 - val_loss: 0.8944 - val_accuracy: 0.0000e+00\n",
       "Epoch 3/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8811 - mean_absolute_error: 0.8811 - val_loss: 0.8905 - val_mean_absolute_error: 0.8905\n",
+      "1216/1216 [==============================] - 4s 3ms/step - loss: 0.8837 - accuracy: 0.0000e+00 - val_loss: 0.8838 - val_accuracy: 0.0000e+00\n",
       "Epoch 4/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8784 - mean_absolute_error: 0.8784 - val_loss: 0.8909 - val_mean_absolute_error: 0.8909\n",
+      "1216/1216 [==============================] - 5s 4ms/step - loss: 0.8821 - accuracy: 0.0000e+00 - val_loss: 0.8877 - val_accuracy: 0.0000e+00\n",
       "Epoch 5/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8769 - mean_absolute_error: 0.8769 - val_loss: 0.8877 - val_mean_absolute_error: 0.8877\n",
+      "1216/1216 [==============================] - 6s 5ms/step - loss: 0.8817 - accuracy: 0.0000e+00 - val_loss: 0.8830 - val_accuracy: 0.0000e+00\n",
       "Epoch 6/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8766 - mean_absolute_error: 0.8766 - val_loss: 0.8870 - val_mean_absolute_error: 0.8870\n",
+      "1216/1216 [==============================] - 7s 6ms/step - loss: 0.8800 - accuracy: 0.0000e+00 - val_loss: 0.8820 - val_accuracy: 0.0000e+00\n",
       "Epoch 7/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8752 - mean_absolute_error: 0.8752 - val_loss: 0.8856 - val_mean_absolute_error: 0.8856\n",
+      "1216/1216 [==============================] - 6s 5ms/step - loss: 0.8796 - accuracy: 0.0000e+00 - val_loss: 0.8808 - val_accuracy: 0.0000e+00\n",
       "Epoch 8/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8755 - mean_absolute_error: 0.8755 - val_loss: 0.8867 - val_mean_absolute_error: 0.8867\n",
+      "1216/1216 [==============================] - 7s 6ms/step - loss: 0.8787 - accuracy: 0.0000e+00 - val_loss: 0.8828 - val_accuracy: 0.0000e+00\n",
       "Epoch 9/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8744 - mean_absolute_error: 0.8744 - val_loss: 0.8875 - val_mean_absolute_error: 0.8875\n",
+      "1216/1216 [==============================] - 6s 5ms/step - loss: 0.8786 - accuracy: 0.0000e+00 - val_loss: 0.8820 - val_accuracy: 0.0000e+00\n",
       "Epoch 10/10\n",
-      "1216/1216 [==============================] - 3s 2ms/step - loss: 0.8745 - mean_absolute_error: 0.8745 - val_loss: 0.8868 - val_mean_absolute_error: 0.8868\n"
+      "1216/1216 [==============================] - 5s 4ms/step - loss: 0.8781 - accuracy: 0.0000e+00 - val_loss: 0.8821 - val_accuracy: 0.0000e+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1c0c5f44950>"
+       "<keras.src.callbacks.History at 0x2580654ab50>"
       ]
      },
      "execution_count": 20,
@@ -1156,19 +1156,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "254/254 [==============================] - 0s 1ms/step\n"
+      "254/254 [==============================] - 1s 2ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.48638457],\n",
-       "       [0.49164143],\n",
-       "       [0.49164143],\n",
+       "array([[0.502471  ],\n",
+       "       [0.49150795],\n",
+       "       [0.5013044 ],\n",
        "       ...,\n",
-       "       [0.37359327],\n",
-       "       [0.4708477 ],\n",
-       "       [0.4916417 ]], dtype=float32)"
+       "       [0.4981096 ],\n",
+       "       [0.49686065],\n",
+       "       [0.50141114]], dtype=float32)"
       ]
      },
      "execution_count": 21,
@@ -1229,7 +1229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r2 score for the model is: 0.24350744283742976\n"
+      "r2 score for the model is: 0.22411617050181798\n"
      ]
     }
    ],
