--- a/random forest regressor.ipynb
+++ b/random forest regressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 1,
    "id": "dca28a38",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 2,
    "id": "76a7b230",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 3,
    "id": "a0debf07",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 4,
    "id": "4ec057e5",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "Name: Avg_tem, Length: 3652, dtype: float64"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 5,
    "id": "baff7071",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 6,
    "id": "ab81bf6d",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 7,
    "id": "a8b6dd85",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 8,
    "id": "a5b22e9e",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "2013/10/5  0.3    30.8   24.4    27.60"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,14 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 9,
    "id": "82eeac36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DATE         int32\n",
        "RF         float64\n",
        "T max      float64\n",
        "T min      float64\n",
@@ -311,7 +310,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 10,
    "id": "5ebb36e7",
    "metadata": {},
    "outputs": [
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 11,
    "id": "f4aa446a",
    "metadata": {},
    "outputs": [
@@ -375,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 12,
    "id": "973b74cd",
    "metadata": {},
    "outputs": [],
@@ -385,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 13,
    "id": "c8668371",
    "metadata": {},
    "outputs": [],
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 14,
    "id": "a31204bd",
    "metadata": {},
    "outputs": [],
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 15,
    "id": "68ac8f63",
    "metadata": {},
    "outputs": [],
@@ -416,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 16,
    "id": "77dc5a29",
    "metadata": {},
    "outputs": [
@@ -424,7 +423,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sevindu\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:1152: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n"
      ]
     },
@@ -453,6 +452,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "dc565586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model, open('weatherModel.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 202,
    "id": "20de9b55",
    "metadata": {},
@@ -474,22 +484,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 19,
    "id": "e560ce78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter Day28\n",
-      "Enter Month09\n",
-      "Enter Year2024\n",
-      "Enter Minimum Temp26\n",
-      "Enter Maximum Temp28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = int(input('Enter Day'))\n",
     "month = int(input('Enter Month'))\n",
@@ -500,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 20,
    "id": "61e52198",
    "metadata": {},
    "outputs": [
@@ -508,9 +506,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27.0\n",
-      "2024-09-28 00:00:00\n",
-      "User entered date in float representation: 1727461800.0\n"
+      "33.0\n",
+      "2024-02-11 00:00:00\n",
+      "User entered date in float representation: 1707589800.0\n"
      ]
     }
    ],
@@ -543,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 21,
    "id": "9b794ac9",
    "metadata": {},
    "outputs": [],
@@ -556,6 +554,27 @@
     "    'Avg_tem': [T_Avg],\n",
     "    'DATE' : [float_representation],\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fce7c697",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Average RainFall: 60.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "loaded_model = pickle.load(open('weatherModel.pkl','rb'))\n",
+    "# Make a prediction\n",
+    "user_prediction = loaded_model.predict(user_data)\n",
+    "print(f'Predicted Average RainFall: {user_prediction[0]:.2f}')"
    ]
   },
   {
@@ -606,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
