added a line to save the model as .pkl file

--- a/XGBoostSalesModel/Sales Prediction using XG boost.ipynb
+++ b/XGBoostSalesModel/Sales Prediction using XG boost.ipynb
@@ -6836,14 +6836,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Hammaad\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -6857,6 +6857,7 @@
     "import xgboost as xgb\n",
     "from xgboost import XGBRegressor\n",
     "import joblib\n",
+    "import pickle\n",
     "sales_df=pd.read_csv('Sales_Data_New.csv')\n",
     "# Assuming your DataFrame is named 'salesdf'\n",
     "# Assuming 'Units Sold' is the target variable\n",
@@ -6888,7 +6889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -6924,22 +6925,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/xgboost/core.py:160: UserWarning: [22:03:39] WARNING: /Users/runner/work/xgboost/xgboost/src/c_api/c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
-      "  warnings.warn(smsg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "joblib.dump(scaler, 'scaler.joblib')\n",
     "joblib.dump(encoder, 'encoder.joblib')\n",
-    "model.save_model('xgboost_model.model')"
+    "pickle.dump(model, open('salesModel.pkl', 'wb'))"
    ]
   },
   {
@@ -6959,7 +6951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7052,22 +7044,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Hammaad\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator StandardScaler from version 1.3.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Hammaad\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator OneHotEncoder from version 1.3.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "date=\"2024-01-20\"\n",
     "rainfall=10.0\n",
@@ -7077,8 +7056,7 @@
     "\n",
     "scaler = joblib.load('scaler.joblib')# Load the scaler\n",
     "encoder = joblib.load('encoder.joblib')# Load the encoder\n",
-    "model = XGBRegressor()\n",
-    "model.load_model('xgboost_model.model')# Load the model\n",
+    "model = pickle.load(open('salesModel.pkl', 'rb'))# Load the model\n",
     "\n",
     "columns_to_drop = [\"Product Name\", \"Units Sold\"]#not needed for prediction\n",
     "new_record = new_record.drop(columns=columns_to_drop)  \n",
@@ -7114,7 +7092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -7355,7 +7333,7 @@
        "28                   HIGHLAND YOGHURT 80ML        YOGHURT          24"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7388,7 +7366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
