exchange predictor update

--- a/GBP_ARIMA.ipynb
+++ b/GBP_ARIMA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "id": "e12bdf26",
       "metadata": {
         "id": "e12bdf26"
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 3,
       "id": "dd60ec5b",
       "metadata": {
         "id": "dd60ec5b"
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 4,
       "id": "8b6594da",
       "metadata": {
         "colab": {
@@ -105,7 +105,7 @@
               "4  1/6/2023  438.940"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "id": "209f07a1",
       "metadata": {
         "colab": {
@@ -133,7 +133,7 @@
               "<AxesSubplot:>"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 6,
       "id": "9d881242",
       "metadata": {
         "id": "9d881242"
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 7,
       "id": "b0aba050",
       "metadata": {
         "id": "b0aba050"
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 8,
       "id": "84209020",
       "metadata": {
         "id": "84209020"
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 9,
       "id": "d7462cd0",
       "metadata": {
         "colab": {
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 10,
       "id": "a59731a6",
       "metadata": {
         "colab": {
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 11,
       "id": "e5d4490b",
       "metadata": {
         "colab": {
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 12,
       "id": "639b037e",
       "metadata": {
         "colab": {
@@ -394,8 +394,8 @@
             "==============================================================================\n",
             "Dep. Variable:                  Price   No. Observations:                  290\n",
             "Model:                 ARIMA(0, 1, 0)   Log Likelihood                -817.795\n",
-            "Date:                Mon, 12 Feb 2024   AIC                           1637.591\n",
-            "Time:                        08:47:12   BIC                           1641.257\n",
+            "Date:                Sat, 17 Feb 2024   AIC                           1637.591\n",
+            "Time:                        17:58:36   BIC                           1641.257\n",
             "Sample:                    01-02-2023   HQIC                          1639.060\n",
             "                         - 02-09-2024                                         \n",
             "Covariance Type:                  opg                                         \n",
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 15,
       "id": "16070ca3",
       "metadata": {
         "colab": {
@@ -585,11 +585,200 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "YiQpU3g9kpSE",
       "metadata": {
         "id": "YiQpU3g9kpSE"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-02-12    394.689736\n",
+            "2024-02-13    394.690159\n",
+            "2024-02-14    394.690403\n",
+            "2024-02-15    394.690543\n",
+            "2024-02-16    394.690624\n",
+            "2024-02-19    394.690670\n",
+            "2024-02-20    394.690697\n",
+            "Freq: B, Name: predicted_mean, dtype: float64\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(forecast_values)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "66496fad",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                               SARIMAX Results                                \n",
+            "==============================================================================\n",
+            "Dep. Variable:                  Price   No. Observations:                  290\n",
+            "Model:                 ARIMA(1, 0, 1)   Log Likelihood                -820.643\n",
+            "Date:                Sun, 18 Feb 2024   AIC                           1649.285\n",
+            "Time:                        03:39:12   BIC                           1663.965\n",
+            "Sample:                    01-02-2023   HQIC                          1655.167\n",
+            "                         - 02-09-2024                                         \n",
+            "Covariance Type:                  opg                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const        408.6930      9.454     43.228      0.000     390.163     427.223\n",
+            "ar.L1          0.9775      0.012     78.282      0.000       0.953       1.002\n",
+            "ma.L1          0.0184      0.051      0.363      0.717      -0.081       0.118\n",
+            "sigma2        16.6248      0.569     29.215      0.000      15.510      17.740\n",
+            "===================================================================================\n",
+            "Ljung-Box (L1) (Q):                   0.01   Jarque-Bera (JB):              2040.24\n",
+            "Prob(Q):                              0.92   Prob(JB):                         0.00\n",
+            "Heteroskedasticity (H):               0.15   Skew:                            -1.77\n",
+            "Prob(H) (two-sided):                  0.00   Kurtosis:                        15.50\n",
+            "===================================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+            "Predicted Exchange Rates for the Next 7 Days:\n",
+            "2024-02-19: 395.0001290560199\n",
+            "2024-02-20: 395.30763017110314\n",
+            "2024-02-21: 395.6082257119081\n",
+            "2024-02-22: 395.9020707574044\n",
+            "2024-02-23: 396.1893169039423\n",
+            "2024-02-24: 396.47011234346235\n",
+            "2024-02-25: 396.74460193994787\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\Dell\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.7_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python37\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:471: ValueWarning: No frequency information was provided, so inferred frequency B will be used.\n",
+            "  self._init_dates(dates, freq)\n",
+            "C:\\Users\\Dell\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.7_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python37\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:471: ValueWarning: No frequency information was provided, so inferred frequency B will be used.\n",
+            "  self._init_dates(dates, freq)\n",
+            "C:\\Users\\Dell\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.7_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python37\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:471: ValueWarning: No frequency information was provided, so inferred frequency B will be used.\n",
+            "  self._init_dates(dates, freq)\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.tsa.arima.model import ARIMA\n",
+        "from datetime import datetime\n",
+        "\n",
+        "# Import today's date from code\n",
+        "todays_date = datetime.today().date()\n",
+        "\n",
+        "# Read the CSV file into a DataFrame\n",
+        "df = pd.read_csv('C:\\\\Users\\\\Dell\\\\Desktop\\\\Praveen\\\\MarketWiz\\\\DATA\\\\GBP.csv', parse_dates=['Date'], index_col='Date')\n",
+        "\n",
+        "order = (1, 0, 1)\n",
+        "\n",
+        "# Fit ARIMA model\n",
+        "model = ARIMA(df['Price'], order=order)\n",
+        "results = model.fit()\n",
+        "\n",
+        "# Display the model summary\n",
+        "print(results.summary())\n",
+        "\n",
+        "# Forecast for 7 days from today's date\n",
+        "forecast_steps = 7\n",
+        "forecast = results.get_forecast(steps=forecast_steps)\n",
+        "forecast_values = forecast.predicted_mean\n",
+        "predictions = []\n",
+        "# Print the predicted exchange rates for the next 7 days\n",
+        "print(\"Predicted Exchange Rates for the Next 7 Days:\")\n",
+        "for i in range(forecast_steps):\n",
+        "   prediction_date = todays_date + pd.Timedelta(days=i + 1)  # Adjust for starting from tomorrow\n",
+        "   print(f\"{prediction_date}: {forecast_values.iloc[i]}\")\n",
+        "   predictions.append(forecast_values.iloc[i])\n",
+        "\n",
+        "# ... (rest of your code for evaluation metrics) ...\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "aa62d73c",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[395.0001290560199,\n",
+              " 395.30763017110314,\n",
+              " 395.6082257119081,\n",
+              " 395.9020707574044,\n",
+              " 396.1893169039423,\n",
+              " 396.47011234346235,\n",
+              " 396.74460193994787]"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "predictions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "f6910e02",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Daily Price Increase Rates:\n",
+            "Day 1: 0.08%\n",
+            "Day 2: 0.08%\n",
+            "Day 3: 0.07%\n",
+            "Day 4: 0.07%\n",
+            "Day 5: 0.07%\n",
+            "Day 6: 0.07%\n",
+            "\n",
+            "Total Price Increase: 1.74 LKR\n",
+            "Total Increase Rate: 0.44%\n"
+          ]
+        }
+      ],
+      "source": [
+        "daily_increases = [predictions[i + 1] - predictions[i] for i in range(len(predictions) - 1)]\n",
+        "\n",
+        "# Calculate daily increase rates as percentages\n",
+        "daily_increase_rates = [increase / predictions[i] * 100 for i, increase in enumerate(daily_increases)]\n",
+        "\n",
+        "# Print daily increase rates\n",
+        "print(\"Daily Price Increase Rates:\")\n",
+        "for i, rate in enumerate(daily_increase_rates):\n",
+        "    print(f\"Day {i + 1}: {rate:.2f}%\")\n",
+        "\n",
+        "# Calculate total price increase and rate\n",
+        "total_increase = sum(daily_increases)\n",
+        "total_increase_rate = total_increase / predictions[0] * 100\n",
+        "\n",
+        "print(f\"\\nTotal Price Increase: {total_increase:.2f} LKR\")\n",
+        "print(f\"Total Increase Rate: {total_increase_rate:.2f}%\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "958cff8f",
+      "metadata": {},
       "outputs": [],
       "source": []
     }
